# claude-guardrail

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
guardrail/: README.md  cli.py  config.py  defaults.yml  engine.py  install.sh  llm.py  logger.py  matcher.py  python_analyzer.py  sanitizer.py
hooks/: hooks.json
hooks/scripts/: check-dependencies.sh  install-hooks.sh  test-guardrail.sh
skills/configuring-rules/: SKILL.md
skills/configuring-rules/examples/: project-config.yml  user-config.yml
skills/configuring-rules/references/: config-schema.md  regex-patterns.md
skills/layer-2-setup/: SKILL.md
skills/layer-2-setup/examples/: layer2-advanced.yml  layer2-basic.yml  test-layer2.sh
skills/layer-2-setup/references/: adversarial-resistance.md  llm-classification.md  sanitization.md
skills/troubleshooting/: SKILL.md
skills/troubleshooting/examples/: check-installation.sh  debug-config.sh  test-commands.sh
skills/troubleshooting/references/: common-errors.md  debugging-commands.md  log-format.md  python-safety.md  regex-testing.md
skills/understanding-guardrail/: SKILL.md
skills/understanding-guardrail/references/: architecture.md  decision-examples.md  security-model.md
tests/: test_guardrail_cli.py  test_guardrail_config.py  test_guardrail_engine.py  test_guardrail_integration.py  test_guardrail_logger.py  test_guardrail_matcher.py  test_guardrail_sanitizer.py  test_install.sh  test_python_analyzer.py
