[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-guardrail"
version = "0.1.0"
description = "Security hook for Claude Code with rule-based and LLM-powered action classification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["claude", "security", "hook", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.18.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/yourusername/claude-guardrail"
Repository = "https://github.com/yourusername/claude-guardrail"
Issues = "https://github.com/yourusername/claude-guardrail/issues"

[tool.setuptools.packages.find]
include = ["guardrail*"]

[tool.setuptools.package-data]
guardrail = ["defaults.yml"]
